--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .App {
   text-align: center;
-  padding-bottom: 200px;
+  padding-bottom: 0px;
 }
 
 .App-logo {
@@ -10,8 +10,7 @@
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  background-color: #585858;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -36,6 +35,7 @@
 .video {
   margin: auto;
   width: 80%;
+  padding-bottom: 60px;
 }
 
 .pad {
@@ -50,9 +50,10 @@
 
 .bio {
   margin: auto;
-  width: 50%;
+  width: 80%;
   text-align: left;
   padding-top: 2em;
+  padding-bottom: 2em;
 }
 
 .class-style {
@@ -60,4 +61,10 @@
   width: 80%;
   text-align: left;
   padding-top: 1em;
+}
+
+.title {
+  padding-top: 40px;
+  padding-bottom: 10px;
+  color: white;
 }
