--- a/src/App.css
+++ b/src/App.css
@@ -19,6 +19,16 @@
   color: white;
 }
 
+.App-header-2 {
+  background-color: #585858;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+
+  color: white;
+}
+
 .App-link {
   color: #61dafb;
 }
